--- a/ConsoleApplication7/ConsoleApplication7.csproj
+++ b/ConsoleApplication7/ConsoleApplication7.csproj
@@ -43,8 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Card.cs" />
+    <Compile Include="ConsoleIO.cs" />
+    <Compile Include="Deck.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="GetCasinoCard.cs" />
+    <Compile Include="GetPlayerCard.cs" />
+    <Compile Include="ReadLine.cs" />
+    <Compile Include="ViewModel.cs" />
+    <Compile Include="StartGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SuitCard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
